add link to contact me

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Suit Game</h1>
-        <h3>Make by Wikla</h3>
+        <h3>Make by <a href="https://wiklapandu.github.io/" target="_blank">Wikla</a></h3>
         <button class="btn" id="start">Start</button>
         <div class="timer">
             <h2>3</h2>
