membuat tampilan baru saat menang, kalah, seri, atau waktu habis

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="content">
         <h1>Suit Game</h1>
         <h3>Make by <a href="https://wiklapandu.github.io/" target="_blank">Wikla</a></h3>
         <button class="btn" id="start">Start</button>
@@ -25,6 +25,30 @@
             <button class="btn-rec myHand">👊🏼</button>
             <button class="btn-rec myHand">✌🏼</button>
         </div>
+    </div>
+    <div id="menang">
+        <h2>Kamu menang 🎉</h2>
+        <button class="btn ulang">
+            Ulang
+        </button>
+    </div>
+    <div id="kalah">
+        <h2>Kamu Kalah ❌</h2>
+        <button class="btn ulang">
+            Ulang
+        </button>
+    </div>
+    <div id="waktu-habis">
+        <h2>Waktu Habis ❕</h2>
+        <button class="btn ulang">
+            Ulang
+        </button>
+    </div>
+    <div id="seri">
+        <h2>Seri dengan Komputer ❕</h2>
+        <button class="btn ulang">
+            Ulang
+        </button>
     </div>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./js/script.js"></script>
